Refactor code. Prg.exe shouldnt redirect anymore when both files with same name exist. Create SaveGame and 2parm path when missing.

--- a/darkpatch.vcxproj.filters
+++ b/darkpatch.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="src\detour.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\import_script.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\util.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\functions.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\detour.h">
@@ -33,6 +42,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="src\functions.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\util.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
