--- a/darkpatch.vcxproj
+++ b/darkpatch.vcxproj
@@ -89,12 +89,16 @@
   <ItemGroup>
     <ClCompile Include="src\detour.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
+    <ClCompile Include="src\functions.cpp" />
+    <ClCompile Include="src\import_script.cpp" />
     <ClCompile Include="src\modmenu.cpp" />
+    <ClCompile Include="src\util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\detour.h" />
     <ClInclude Include="src\functions.h" />
     <ClInclude Include="src\modmenu.h" />
+    <ClInclude Include="src\util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
