--- a/darkpatch.vcxproj.filters
+++ b/darkpatch.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="src\util.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="src\import_script.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
