Add hook for CTL opcodes f1 and f2

--- a/darkpatch.vcxproj
+++ b/darkpatch.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="src\armytmp.cpp" />
     <ClCompile Include="src\camera_elevation.cpp" />
+    <ClCompile Include="src\ctl.cpp" />
     <ClCompile Include="src\detour.cpp" />
     <ClCompile Include="src\display.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
