--- a/darkpatch.vcxproj.filters
+++ b/darkpatch.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\no_cd.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\ctl.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\detour.h">
