Apply patches required by dgvoodoo when the resolution is forced. (also always enables 3D mode) Update to v141

--- a/darkpatch.vcxproj.filters
+++ b/darkpatch.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\multiplayer_scene.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\dgvoodoo.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\detour.h">
